tests/ui/editions/edition-raw-pointer-method-2015.stderr
error: type annotations needed
  --> $DIR/edition-raw-pointer-method-2015.rs:9:15
   |
LL |     let _ = y.is_null();
   |               ^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #46906 <https://github.com/rust-lang/rust/issues/46906>
note: the lint level is defined here
  --> $DIR/edition-raw-pointer-method-2015.rs:5:8
   |
LL | #[deny(warnings)]
   |        ^^^^^^^^
   = note: `#[deny(tyvar_behind_raw_pointer)]` implied by `#[deny(warnings)]`

error: aborting due to 1 previous error

